chore: add listrr api tests
